sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var ecart:Int=getNombreValeurs()/2;
  While (ecart>0){
   	var a:Int=0;
    var v:Int = 0;
    for (i<- 1 to getNombreValeurs -1) {
      v=getValeur(i);
      var j:Int=i;
      while (j>0 && !plusPetitQue(j-e,v)) {
        copie(j-e,j);
        j=j-e
      }
    setValeur(j,v)}}
    }
 